data/derived/comb/progs/unify/prog5599.ml.out
Characters 64-82:
  if n < 0 then [] else  (n mod 10)::[] @ digitsOfInt (n/10)::[];;
                                          ^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
